# my-app

./: .gitignore  .hintrc  AUTO_CLEAR_CACHE.md  BUILD-REPORT.md  BUILD-SUMMARY.md  CHECK-AUTH-MISMATCH.sql  CHECKLIST-KIEM-TRA.md  CREATE-STORAGE-BUCKET.md  CREATE-TASK-REPORTS-BUCKET.md  DA-SUA-XONG-LOI.md  DEBUG-GUIDE-DETAIL.md  DEBUG-NOTIFICATIONS.sql  DEBUG-WHITE-SCREEN.md  ELECTRON-BUILD-GUIDE.md  FEATURE_REQUIRE_PDF_ON_COMPLETION.md  FINAL-CHECK-INSTRUCTIONS.md  FINAL-FIX-GUIDE.md  FINAL-TEST-INSTRUCTIONS.md  FINAL_UX_OPTIMIZATION.md  FIX-BLANK-SCREEN.md  FIX-DATABASE-PERMISSIONS.sql  FIX-NOTIFICATIONS-RLS.sql  FIX-RLS-FINAL.sql  FIX-ROUTING-ERROR.md  FIX-SLOW-LOADING.md  FIXED-ROUTING-ERROR.md  FIXED_HIRE_DATE.md  FIX_INFINITE_RECURSION_NOW.md  HOTFIX-2025-10-29-fix-project-members-recursion.sql  HOTFIX-2025-10-30-fix-reminder-sent-column.sql  HOTFIX-2025-10-30-projects-rls-manager-view.sql  HOTFIX-2025-10-30-task-attachments-project-id.sql  HOW-TO-ADD-ICON.md  HUONG-DAN-DEBUG-ELECTRON.md  HUONG-DAN-EXCEL-IMPORT-EXPORT.md  HUONG-DAN-HE-THONG-NHAC-VIEC.md  HUONG-DAN-IMPORT-EXPORT-NHAN-SU.md  HUONG-DAN-KIEM-TRA-CHUONG-THONG-BAO.md  HUONG-DAN-SU-DUNG.md  HUONG-DAN-SUA-LOI-THEM-NHAN-SU.md  (+120 more)
.github/: copilot-instructions.md
deploy/: MASTER-INSTALL-INLINE.sql  MASTER-INSTALL.sql  README-DEPLOY.md  SQL-ORDER.md  package-sql.ps1
electron/: main.cjs  (+2 more)
progress-service/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
progress-service/app/: logging_config.py  main.py  models.py  services.py  settings.py
progress-service/tests/: test_services.py
(+129 files in other folders)
